--- a/os.html
+++ b/os.html
@@ -1,8 +1,10 @@
 <html>
+<title>Doing in Old School</title>
 <body>
-HTML - Old School, Baby
-
+HTML - Old School, Baby<br>
+<list>
 Page Revisions
 <li>1/26/15 - 4:55 - sitting in Redmond</li>
+</list>
 </body>
 </html>
